# Customer-Churn-Financial-Analysis

./: .gitignore  README.md  main.py  pyproject.toml
data/cleaned/: Telco_customer_churn_cleaned.csv
models/: bank_churn_prediction_model.cbm  telco_churn_prediction_model.cbm
notebooks/: EDA_bank_customer.ipynb  EDA_telco.ipynb
notebooks/cleaning/: cleaning_bank_data.ipynb  cleaning_telco_data.ipynb
notebooks/training/: Bank_customer_churn_modeltraining.ipynb  Telco_customer_churn_modeltraining.ipynb
notebooks/training/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/training/catboost_info/learn/: events.out.tfevents
notebooks/training/catboost_info/test/: events.out.tfevents
src/: app.py
